--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/carloscacho">@carloscacho</a> </p>
+        <p>Desenvolvido por <a href="https://github.com/Giovannabmatos/Loteca">@Giovannabmatos</a> </p>
     </footer>
     <script  src= "script.js"></script>
 </body>
