alterei o html e o script

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     
 
     <div class="sorteio">
-        <h4>Numeros Sorteados:</h4>
+        <h4>Numeros Sorteados: </h4>
         <p id="sorteados"></p>
     </div>
 
     <div class="acertos">
-        <h4>Acertos</h4>
+        <h4>Acertos: </h4>
         <p id="acertos"></p>
     </div>
     
